--- a/styles/app.css
+++ b/styles/app.css
@@ -76,7 +76,7 @@
     left: -256px;
     width: 256px;
     height: 100vh;
-    transition:all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
     z-index: 15;
 }
 
@@ -84,8 +84,146 @@
     margin-bottom: 1rem;
     margin-top: 2rem;
 }
+
 .nav_link_sidebar {
     color: var(--color_fff);
     padding: 2rem;
 }
 
+/*======================================|start header content*/
+
+.header_content_wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header_content_left {
+    max-width: 380px;
+}
+
+.header_title {
+    line-height: 1.5;
+    max-width: 350px;
+}
+
+.header_text {
+    color: var(--color_C90000);
+    font-family: "poppins-semibold", serif;
+    font-weight: 600;
+    font-size: 48px;
+}
+
+.header_caption {
+    font-family: poppins-regular, serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--color_504F4F);
+}
+
+.header_total {
+
+}
+
+.header_total_price {
+    display: flex;
+    align-items: center;
+}
+
+.total_title {
+    font-family: "poppins-light-300", serif;
+    font-size: 16px;
+    color: var(--color_504F4F);
+    margin-right: 5px;
+
+}
+
+.total_price {
+    font-size: 24px;
+    color: var(--color_323232);
+}
+
+.order {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.count {
+    display: flex;
+    align-items: center;
+}
+
+.count_btn {
+    font-size: 30px;
+    top: 12px;
+    left: 5px;
+    opacity: 1;
+    border: none;
+    color: var(--color_7D7C7C);
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.number {
+    font-family: "poppins-medium-500", serif;
+    font-size: 20px;
+    color: var(--color_FFC300);
+}
+
+.number::after,
+.number::before {
+    content: "";
+    display: inline-block;
+    width: 2px;
+    height: 16px;
+    border-radius: 8px;
+    background-color: var(--color_F1F1F1);
+}
+
+.count_btn {
+
+}
+
+.decrease {
+    font-size: 40px;
+    padding-bottom: 9px;
+}
+
+.order_btn {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    font-family: "poppins-medium-500", serif;
+    font-size: 18px;
+    width: 189px;
+    height: 62px;
+    padding: 16px 24px 16px 24px;
+    border-radius: 100px;
+    background-color: var(--color_FFC300);
+    color: var(--color_323232);
+    border: none;
+}
+
+.header_content_right {
+    position: relative;
+}
+
+.header_time {
+
+}
+
+.time_img {
+    position: absolute;
+    top: 100px;
+    left: -90px;
+}
+
+.header_img {
+
+}
+
+.burger_img {
+
+}
