--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,33 +1,42 @@
 @font-face {
-    font-family: poppins;
+    font-family: "poppins-bold-900";
     font-style: normal;
     font-weight: 900;
     src: url('../fonts/poppins/poppins-bold-webfont.woff') format('woff');
 }
 @font-face {
-    font-family: poppins;
+    font-family: "poppins-bold-700";
     font-style: normal;
     font-weight: 700;
     src: url('../fonts/poppins/poppins-bold-webfont.woff') format('woff');
 }
 @font-face {
-    font-family: poppins;
+    font-family: "poppins-medium-500";
     font-style: normal;
     font-weight: 500;
     src: url('../fonts/poppins/poppins-medium-webfont.woff') format('woff');
 }
 @font-face {
-    font-family: poppins;
+    font-family: "poppins-medium-600";
     font-style: normal;
     font-weight: 600;
     src: url('../fonts/poppins/poppins-medium-webfont.woff') format('woff');
 }
 @font-face {
-    font-family: poppins;
+    font-family: "poppins-light-300";
     font-style: normal;
     font-weight: 300;
     src: url('../fonts/poppins/poppins-light-webfont.woff') format('woff');
 }
 
+@font-face {
+    font-family: "poppins-semibold";
+    font-style: normal;
+    src: url('../fonts/poppins/poppins-semibold-webfont.woff') format('woff');
+}
 
-
+@font-face {
+    font-family: "poppins-regular";
+    font-style: normal;
+    src: url('../fonts/poppins/poppins-regular-webfont.woff') format('woff');
+}
