--- a/styles/app.css
+++ b/styles/app.css
@@ -94,25 +94,27 @@
 
 .header_content_wrapper {
     display: grid;
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: 1fr 1fr;
     justify-content: space-between;
     align-items: center;
 }
 
 .header_content_left {
-    max-width: 380px;
+    max-width: 379.92px;
+    margin: 0 1rem;
 }
 
 .header_title {
+    max-width: 343px;
     line-height: 1.5;
-    max-width: 350px;
+    margin-top: 6rem;
 }
 
 .header_text {
     color: var(--color_C90000);
     font-family: "poppins-semibold", serif;
     font-weight: 600;
-    font-size: 48px;
+    font-size: 47px;
 }
 
 .header_caption {
@@ -123,7 +125,7 @@
 }
 
 .header_total {
-
+    max-width: 369px;
 }
 
 .header_total_price {
@@ -151,9 +153,16 @@
 }
 
 .count {
+    background: rgba(255, 255, 255, 1);
     display: flex;
     align-items: center;
+    box-shadow: 0 10px 17px 0 rgba(112, 144, 176, 0.2);
+    border-radius: 100px;
+    max-width: 140px;
+    max-height: 46px;
+    padding: 0 18px;
 }
+
 
 .count_btn {
     font-size: 30px;
@@ -180,6 +189,7 @@
     height: 16px;
     border-radius: 8px;
     background-color: var(--color_F1F1F1);
+    margin: 0 5px;
 }
 
 .count_btn {
@@ -216,7 +226,7 @@
 
 .time_img {
     position: absolute;
-    top: 100px;
+    top: 68px;
     left: -90px;
 }
 
@@ -225,5 +235,13 @@
 }
 
 .burger_img {
+    width: 100%;
+}
 
+.header_total_mobile {
+    display: none;
+}
+
+.t-img {
+    display: none;
 }
