--- a/styles/app.css
+++ b/styles/app.css
@@ -513,7 +513,6 @@
 .sale-off_price {
     display: flex;
     align-items: center;
-    /*margin-top: 10px;*/
     margin-top: auto;
     margin-bottom: 28px;
 }
@@ -584,4 +583,56 @@
 
 .sale-off_image img {
     width: 220px;
+}
+
+/*========================================|mobile app*/
+
+.section_mobile_app{
+    display: grid;
+    grid-template-columns: 35% 60%;
+    justify-content: flex-end;
+    border: 1px solid var(--color_E3E3E3);
+    background-color: var(--color_F1F1F1);
+    border-radius: 0 500px 500px 0;
+    max-width: 90%;
+    margin-top: 10rem;
+}
+.img_section_mobile_app img{
+    max-width: 400px;
+    height: 100%;
+    object-fit: cover;
+    transform: scale(1.2);
+    position: relative;
+    top: -25px;
+}
+.content_section_mobile_app{
+    padding: 2rem;
+    justify-self: center;
+    align-self: center;
+}
+.content_section_mobile_app h6{
+    color: var(--color_7D7C7C);
+    font-size: 20px;
+    font-weight: 500;
+}
+.content_section_mobile_app h4{
+    color: var(--color_C90000);
+    font-size: 48px;
+    font-weight: 500;
+    margin: 1rem 0;
+}
+.content_section_mobile_app p{
+    color: var(--color_323232);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    max-width: 77%;
+}
+.download_btn_app a{
+    margin-top: 32px;
+    width: 14%;
+    display: inline-block;
+}
+.download_btn_app a:last-child{
+    margin-left: 7rem;
 }
