coding section_search_location

--- a/styles/app.css
+++ b/styles/app.css
@@ -636,3 +636,72 @@
 .download_btn_app a:last-child{
     margin-left: 7rem;
 }
+/*=========================================|content_search_location*/
+
+.content_search_location{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color_323232);
+    border-radius: 20px;
+    margin-top: 5rem;
+    height: 398px;
+}
+.content_search_location h6{
+    color: var(--color_FFFDE6);
+    font-size: 48px;
+    font-weight: 500;
+    margin: 0;
+}
+.content_search_location p{
+    color: var(--color_F1F1F1);
+    font-size: 16px;
+    font-weight: 400;
+    margin: 0.5rem 0 4rem 0;
+}
+.content_search_location form{
+    position: relative;
+    width: 45%;
+    background-color: var(--color_FFC300);
+    border-radius: 100px;
+    padding: 0 10px;
+    height: 56px;
+}
+.content_search_location form input{
+    height: 100%;
+    width: 100%;
+    background-color: transparent;
+    border: 0;
+    font-size: 16px;
+    font-weight: 400;
+}
+.content_search_location form input::placeholder{
+    color: var(--color_504F4F);
+    font-family: "poppins-regular", serif;
+    font-weight: 400;
+    font-size: 16px;
+}
+.content_search_location form button{
+    background-color: var(--color_fff);
+    border-radius: 100px;
+    padding: 12px 24px;
+    border: 0;
+    position: absolute;
+    right: 13px;
+    top: 15%;
+}
+.section_search_location img{
+    max-width: 187px;
+    object-fit: cover;
+    position: absolute;
+}
+.section_search_location img:last-child{
+    bottom: 0;
+    left: 10%;
+}
+.section_search_location img:nth-child(4){
+    top: 18%;
+    left: 0;
+}
