--- a/styles/global.css
+++ b/styles/global.css
@@ -20,6 +20,7 @@ html {
     --color_FFF6A3:#FFF6A3;
     --color_E3E3E3:#E3E3E3;
     --color_F1F1F1:#F1F1F1;
+    --color_FFFDE6:#FFFDE6;
     --color_rgb_241:rgba(241, 241, 241, 0.70);
     --color_rgb_241-040:rgba(241, 241, 241, 0.40);
     --color_rgb_122_144_176:rgba(112, 144, 176, 0.20);
